# packagekitqt-example

./: CMakeLists.txt  Messages.sh
icons/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  packagekitqtexample.cpp  packagekitqtexample.desktop  packagekitqtexample.h  packagekitqtexample.ui
